--- a/rocketmq-api/pom.xml
+++ b/rocketmq-api/pom.xml
@@ -5,6 +5,18 @@
   <groupId>org.example</groupId>
   <artifactId>rocketmq-api</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>7</source>
+          <target>7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <packaging>jar</packaging>
 
   <name>rocketmq-api</name>
@@ -21,6 +33,14 @@
       <artifactId>rocketmq-client</artifactId>
       <version>4.9.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
+
 
 
     <dependency>
