--- a/rocketmq-springboot/pom.xml
+++ b/rocketmq-springboot/pom.xml
@@ -25,6 +25,12 @@
             <version>2.2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.14.5</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
